[gd_scene load_steps=2 format=3 uid="uid://b7isqm62vt2ug"]

[ext_resource type="Script" uid="uid://yqkeq6yques1" path="res://scripts/audio_player.gd" id="1_stys3"]

[node name="AudioPlayer" type="HBoxContainer"]
offset_right = 325.0
offset_bottom = 32.0
alignment = 1
script = ExtResource("1_stys3")

[node name="PlayButton" type="Button" parent="."]
layout_mode = 2
size_flags_horizontal = 4
toggle_mode = true
text = "⏯️"

[node name="SoundProgressBar" type="HSlider" parent="."]
custom_minimum_size = Vector2(300, 32)
layout_mode = 2
scrollable = false

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -7.01

[connection signal="toggled" from="PlayButton" to="." method="_on_play_button_toggled"]
[connection signal="drag_ended" from="SoundProgressBar" to="." method="_on_sound_progress_bar_drag_ended"]
[connection signal="drag_started" from="SoundProgressBar" to="." method="_on_sound_progress_bar_drag_started"]
